Processing 'chunks' of DF map prior to running MC Chunks to permit per-block manipulations in MC.

--- a/App.config
+++ b/App.config
@@ -4,6 +4,10 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="DwarvenRealms.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+    
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DwarvenRealms.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -26,6 +30,9 @@
                 <value />
             </setting>
             <setting name="hydrosphereMapPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="structureMapPath" serializeAs="String">
                 <value />
             </setting>
             <setting name="outputPath" serializeAs="String">
@@ -66,4 +73,11 @@
             </setting>
         </DwarvenRealms.Properties.Settings>
     </userSettings>
+<applicationSettings>
+        <DwarvenRealms.Properties.Settings>
+            <setting name="gcAllowVeryLargeObjects" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </DwarvenRealms.Properties.Settings>
+    </applicationSettings>
 </configuration>
