--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -20,6 +20,9 @@
     <Setting Name="hydrosphereMapPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="structureMapPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
     <Setting Name="outputPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
@@ -55,6 +58,9 @@
     </Setting>
     <Setting Name="gameMode" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="gcAllowVeryLargeObjects" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
